Fix image and font

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 
         <div class="row justify-content-center">
             <div class="col-lg-10">
-                <img id="main-logo" class="img-fluid" src="/infantado.jpg" />
-                <!-- img id="main-logo" class="img-fluid" src="img/transparent.png" /-->
+                <img id="main-logo" class="img-fluid" src="/infantado.png" />
             </div>
         </div>
         <div class="row lead justify-content-center">
