--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <!-- Other -->
-	<link rel="stylesheet" href="/main.css" type="text/css">
+	<link rel="stylesheet" href="css/main.css" type="text/css">
     <!-- Inline -->
     <style>
         /* css here */
@@ -31,7 +31,7 @@
 
         <div class="row justify-content-center">
             <div class="col-lg-10">
-                <img id="main-logo" class="img-fluid" src="/infantado.png" />
+                <img id="main-logo" class="img-fluid" src="img/infantado.png" />
             </div>
         </div>
         <div class="row lead justify-content-center">
@@ -43,11 +43,12 @@
         </div>
         <div class="row contacts justify-content-center">
             <div class="col-lg-12">
-                <p>Vineyards &amp; winery: Quinta do Infantado -- Chanceleiros - 5085-271 Pinhão - Portugal</p>
+                <p>Vineyards &amp; winery: Quinta do Infantado &#8211; Chanceleiros - 5085-217 Pinhão - Portugal</p>
                 <p>
                     <span>phone +351 254 738 020</span>
                     <span><a href="mailto:quinta@quintadoinfantado.pt">quinta@quintadoinfantado.pt</a></span>
-                    <span><a href="">google maps</a></span>
+                    <span><a target="_blank" href="https://www.google.com/maps/preview/place/Quinta+Do+Infantado/@41.1755489,-7.5813776,1050m/data=!3m1!1e3!4m2!3m1!1s0x0:0xac89cf4a6d095768
+">google maps</a></span>
                 </p>
             </div>
         </div>
