--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Quinta do Infantado</title>
-	<meta name="description" content="description here">
+	<meta name="description" content="Single Quinta Estate bottled Douro and Porto">
+
+    <meta property="og:site_name"    content ="Quinta do Infantado" />
+    <meta property="og:type"         content ="website" />
+    <meta property="og:title"        content ="Quinta do Infantado" />
+    <meta property="og:url"          content ="http://quintadoinfantado.com" />
+
+    <meta name="twitter:card"        content ="summary_large_image" />
+    <meta name="twitter:title"       content ="Quinta do Infantado" />
+    <meta name="twitter:url"         content ="http://quintadoinfantado.com" />
+
+    <meta name="twitter:description" content ="Single Quinta Estate bottled Douro and Porto" />
+    <meta property="og:description"  content ="Single Quinta Estate bottled Douro and Porto" />
+    <meta property="og:image:url" content ="http://www.quintadoinfantado.com/img/infantado.png" />
+    <meta name="twitter:image"    content ="http://www.quintadoinfantado.com/img/infantado.png" />
+
 
 	<!-- CSS -->
     <!-- Bootstrap -->
