--- a/index.html
+++ b/index.html
@@ -19,22 +19,11 @@
     <meta property="og:image:url" content ="http://www.quintadoinfantado.com/img/infantado.png" />
     <meta name="twitter:image"    content ="http://www.quintadoinfantado.com/img/infantado.png" />
 
-
 	<!-- CSS -->
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <!-- Other -->
 	<link rel="stylesheet" href="css/main.css" type="text/css">
-    <!-- Inline -->
-    <style>
-        /* css here */
-    </style>
-
-
-	<!-- JS  -->
-    <!-- Inline -->
-	<script type="text/javascript">
-	</script>
 </head>
 <body>
 
@@ -46,7 +35,7 @@
 
         <div class="row justify-content-center">
             <div class="col-lg-10">
-                <img id="main-logo" class="img-fluid" src="img/infantado.png" />
+                <img id="main-logo" class="img-fluid" alt="Quinta do Infantado's logo" src="img/infantado-logo.png" />
             </div>
         </div>
         <div class="row lead justify-content-center">
@@ -83,8 +72,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-    <!-- Other -->
-	<script src="" type="text/javascript"></script>
 
 </body>
 </html>
