More SEO improvements

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Quinta do Infantado</title>
 	<meta name="description" content="Single Quinta Estate bottled Douro and Porto">
+    <meta name="keywords" content="quinta,infantado,porto,wine,douro,portugal" />
+    <meta name="robots" content="index,follow" />
 
     <meta property="og:site_name"    content ="Quinta do Infantado" />
     <meta property="og:type"         content ="website" />
