--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 	<title>Quinta do Infantado</title>
 	<meta name="description" content="Single Quinta Estate bottled Douro and Porto">
     <meta name="keywords" content="quinta,infantado,porto,wine,douro,portugal" />
@@ -38,7 +40,7 @@
 
         <div class="row justify-content-center">
             <div class="col-lg-10">
-                <img id="main-logo" class="img-fluid" alt="Quinta do Infantado's logo" src="img/infantado-logo.png" />
+                <img id="main-logo" class="img-fluid" src="img/infantado-logo.png" />
             </div>
         </div>
         <div class="row lead justify-content-center">
